// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deployer 1`] = `
[
  "html",
  "head",
  "meta:nth-of-type(1)",
  "head > title",
  "[name="author"]",
  "[name="viewport"]",
  "[name="description"]",
  "[name="keywords"]",
  "meta:nth-of-type(6)",
  "meta:nth-of-type(7)",
  "meta:nth-of-type(8)",
  "meta:nth-of-type(9)",
  "meta:nth-of-type(10)",
  "meta:nth-of-type(11)",
  "meta:nth-of-type(12)",
  "meta:nth-of-type(13)",
  "meta:nth-of-type(14)",
  "meta:nth-of-type(15)",
  "meta:nth-of-type(16)",
  "meta:nth-of-type(17)",
  "meta:nth-of-type(18)",
  "[rel="canonical"]",
  "link:nth-of-type(2)",
  "link:nth-of-type(3)",
  "head > script:nth-of-type(1)",
  "head > script:nth-of-type(2)",
  "body",
  "header",
  "nav",
  ".logo",
  ".logo > svg",
  ".logo g",
  ".logo path:nth-of-type(1)",
  "path:nth-of-type(2)",
  "nav > a:nth-of-type(2)",
  "a:nth-of-type(3)",
  "a:nth-of-type(4)",
  "a:nth-of-type(5)",
  "a:nth-of-type(6)",
  "a:nth-of-type(7)",
  "header > .container",
  ".github-ribbon",
  "h1",
  ".terminal",
  ".macos",
  ".macos > div:nth-of-type(1)",
  ".minus",
  ".plus",
  ".windows",
  ".minimize",
  ".maximize",
  ".close",
  ".close > svg",
  ".close g",
  ".close path",
  ".scroll",
  ".log",
  "form",
  "label",
  "#input",
  "header > script",
  ".try-pro",
  ".try-pro > a",
  ".name",
  "strong",
  "em:nth-of-type(1)",
  "em:nth-of-type(2)",
  ".find-out-more",
  ".getting-started",
  ".getting-started > h2",
  ".getting-started > .grid",
  ".getting-started > .grid > div:nth-of-type(1)",
  "div:nth-of-type(1) > p:nth-child(1)",
  ".download",
  ".download > .button",
  "br",
  ".download-link",
  ".github-stars",
  ".github-stars > a:nth-of-type(1)",
  ".github-stars > a:nth-of-type(2)",
  "#github-bjs",
  "p:nth-of-type(3)",
  "p:nth-of-type(3) > a",
  ".getting-started div:nth-of-type(2)",
  "div:nth-of-type(2) > p:nth-child(1)",
  "pre:nth-of-type(1)",
  "pre:nth-of-type(1) > .language-bash",
  "div:nth-of-type(2) > p:nth-of-type(2)",
  "pre:nth-of-type(2)",
  "pre:nth-of-type(2) > .language-bash",
  ".features",
  ".features > h2",
  ".features > .grid",
  ".features > .grid > div:nth-of-type(1)",
  "div:nth-of-type(1) > h3",
  ".features div:nth-of-type(1) > p",
  ".features div:nth-of-type(2)",
  "div:nth-of-type(2) > h3",
  "div:nth-of-type(2) > p:nth-child(2)",
  ".features div:nth-of-type(3)",
  "div:nth-of-type(3) > h3",
  "div:nth-of-type(3) > p",
  ".features div:nth-of-type(4)",
  "div:nth-of-type(4) > h3",
  "div:nth-of-type(4) > p",
  ".features div:nth-of-type(5)",
  "div:nth-of-type(5) > h3",
  "div:nth-of-type(5) > p",
  ".features div:nth-of-type(6)",
  "div:nth-of-type(6) > h3",
  "div:nth-of-type(6) > p",
  ".features div:nth-of-type(7)",
  "div:nth-of-type(7) > h3",
  "div:nth-of-type(7) > p",
  ".features div:nth-of-type(8)",
  "div:nth-of-type(8) > h3",
  "div:nth-of-type(8) > p",
  "div:nth-of-type(8) a",
  ".builtin",
  ".builtin > h2",
  ".builtin > .grid",
  ".builtin > .grid > div:nth-of-type(1)",
  ".grid > div:nth-of-type(1) > img",
  ".builtin div:nth-of-type(2)",
  "div:nth-of-type(2) > img",
  ".builtin div:nth-of-type(3)",
  "div:nth-of-type(3) > img",
  ".builtin div:nth-of-type(4)",
  "div:nth-of-type(4) > img",
  ".builtin div:nth-of-type(5)",
  "div:nth-of-type(5) > img",
  ".builtin div:nth-of-type(6)",
  "div:nth-of-type(6) > img",
  ".builtin div:nth-of-type(7)",
  "div:nth-of-type(7) > img",
  ".builtin div:nth-of-type(8)",
  "div:nth-of-type(8) > img",
  "div:nth-of-type(9)",
  "div:nth-of-type(9) > img",
  "div:nth-of-type(10)",
  "div:nth-of-type(10) > img",
  "div:nth-of-type(11)",
  "div:nth-of-type(11) > img",
  "div:nth-of-type(12)",
  "div:nth-of-type(12) > img",
  "div:nth-of-type(13)",
  "div:nth-of-type(13) > img",
  "div:nth-of-type(14)",
  "div:nth-of-type(14) > img",
  "div:nth-of-type(15)",
  "div:nth-of-type(15) > img",
  "div:nth-of-type(16)",
  "div:nth-of-type(16) > img",
  ".support",
  ".support > .grid",
  ".support > .grid > div:nth-of-type(1)",
  "div:nth-of-type(1) > h2",
  "div:nth-child(1) > .cell > p:nth-of-type(1)",
  "div:nth-of-type(1) > p:nth-of-type(1) > a",
  "div:nth-of-type(1) > p:nth-child(3)",
  "p:nth-child(3) > .button",
  ".support > .grid > div:nth-of-type(2)",
  "div:nth-of-type(2) > h2",
  ".grid > div:nth-of-type(2) > div:nth-of-type(1)",
  "div:nth-of-type(1) > .preview",
  "div:nth-of-type(1) > .preview > img",
  "div:nth-of-type(1) > .button",
  ".cell > div:nth-of-type(2)",
  "div:nth-of-type(2) > .preview",
  "div:nth-of-type(2) > .preview > img",
  "div:nth-of-type(2) > .button",
  ".cell > div:nth-of-type(3)",
  "div:nth-of-type(3) > .preview",
  "div:nth-of-type(3) > .preview > img",
  "div:nth-of-type(3) > .button",
  "footer",
  "footer > .container",
  ".copy",
  ".with-love",
  ".icon-love",
  ".icon-love > title",
  ".icon-love > path",
  ".with-love > a",
  "body > script:nth-of-type(1)",
  "body > script:nth-of-type(2)",
  "noscript",
  "noscript > div",
  "noscript img",
]
`;

exports[`duplicate 1`] = `
[
  "html",
  "head",
  "body",
  "div:nth-of-type(1)",
  "div:nth-of-type(2)",
]
`;

exports[`duplicate:sub-nodes 1`] = `
[
  "html",
  "head",
  "body",
  "div:nth-of-type(1)",
  "div:nth-of-type(1) > i",
  "div:nth-of-type(2)",
  "div:nth-of-type(2) > i",
]
`;

exports[`github 1`] = `
[
  "html",
  "head",
  "meta:nth-of-type(1)",
  "link:nth-of-type(1)",
  "link:nth-of-type(2)",
  "link:nth-of-type(3)",
  "link:nth-of-type(4)",
  "link:nth-of-type(5)",
  "link:nth-of-type(6)",
  "link:nth-of-type(7)",
  "[name="referrer"]",
  "link:nth-of-type(8)",
  "link:nth-of-type(9)",
  "link:nth-of-type(10)",
  "meta:nth-of-type(3)",
  "head > title",
  "[rel="search"]",
  "[rel="fluid-icon"]",
  "meta:nth-of-type(4)",
  "meta:nth-of-type(5)",
  "meta:nth-of-type(6)",
  "meta:nth-of-type(7)",
  "meta:nth-of-type(8)",
  "meta:nth-of-type(9)",
  "meta:nth-of-type(10)",
  "meta:nth-of-type(11)",
  "meta:nth-of-type(12)",
  "meta:nth-of-type(13)",
  "meta:nth-of-type(14)",
  "meta:nth-of-type(15)",
  "meta:nth-of-type(16)",
  "meta:nth-of-type(17)",
  "meta:nth-of-type(18)",
  "meta:nth-of-type(19)",
  "meta:nth-of-type(20)",
  "[rel="assets"]",
  "[name="pjax-timeout"]",
  "meta:nth-of-type(22)",
  "[name="selected-link"]",
  "meta:nth-of-type(24)",
  "meta:nth-of-type(25)",
  "meta:nth-of-type(26)",
  "[name="google-analytics"]",
  "[name="octolytics-host"]",
  "meta:nth-of-type(29)",
  "[name="octolytics-event-url"]",
  "meta:nth-of-type(31)",
  "meta:nth-of-type(32)",
  "meta:nth-of-type(33)",
  "meta:nth-of-type(34)",
  "[name="dimension1"]",
  "[name="hostname"]",
  "[name="user-login"]",
  "[name="expected-hostname"]",
  "meta:nth-of-type(39)",
  "[name="enabled-features"]",
  "meta:nth-of-type(41)",
  "meta:nth-of-type(42)",
  "meta:nth-of-type(43)",
  "link:nth-of-type(14)",
  "[rel="canonical"]",
  "[name="browser-stats-url"]",
  "[name="browser-errors-url"]",
  "[rel="mask-icon"]",
  "[rel="icon"]",
  "[name="theme-color"]",
  "[name="u2f-support"]",
  "[rel="manifest"]",
  ".logged-out",
  ".logged-out > .position-relative",
  ".logged-out > .position-relative > a",
  ".pjax-loader-bar",
  ".progress",
  ".header-logged-out",
  ".header-logged-out > div",
  ".header-logged-out > div > .flex-items-center",
  ".header-logo-invertocat",
  ".octicon-mark-github",
  ".octicon-mark-github > path",
  ".css-truncate",
  ".btn-link",
  ".octicon-three-bars",
  ".octicon-three-bars > path",
  ".flex-auto",
  "nav",
  "nav > ul",
  "nav li:nth-of-type(1)",
  "ul:nth-child(1) > li:nth-of-type(1) > a",
  "nav li:nth-of-type(2)",
  "ul:nth-child(1) > li:nth-of-type(2) > a",
  "nav li:nth-of-type(3)",
  "ul:nth-child(1) > li:nth-of-type(3) > a",
  "nav li:nth-of-type(4)",
  "ul:nth-child(1) > li:nth-of-type(4) > a",
  "nav li:nth-of-type(5)",
  "ul:nth-child(1) > li:nth-of-type(5) > a",
  ".flex-auto > div",
  ".flex-justify-between .flex-items-center",
  ".header-search",
  ".header-search > form",
  ".header-search div",
  ".header-search [name="utf8"]",
  ".header-search-wrapper",
  ".header-search-scope",
  ".header-search-input",
  "[name="type"]",
  ".flex-justify-between > div > span",
  "span > div",
  "span > div > a:nth-of-type(1)",
  "span .text-gray",
  "span a:nth-of-type(2)",
  ".logged-out > div:nth-of-type(2)",
  ".logged-out > div:nth-of-type(3)",
  ".application-main",
  ".jumbotron",
  ".jumbotron > .position-relative",
  ".position-relative > .flex-items-center",
  ".position-relative > .flex-items-center > div:nth-of-type(1)",
  ".flex-items-center > .text-center > .text-white",
  ".alt-lead",
  ".alt-lead > a:nth-of-type(1)",
  ".alt-lead > a:nth-of-type(2)",
  ".position-relative > .flex-items-center > div:nth-of-type(2)",
  ".flex-items-center > div > div",
  ".text-gray > .home-hero-signup",
  ".text-gray div",
  ".text-gray [name="utf8"]",
  ".text-gray div > input:nth-of-type(2)",
  ".home-hero-signup > dl:nth-of-type(1)",
  ".home-hero-signup > dl:nth-of-type(1) > .input-label",
  ".home-hero-signup > dl:nth-of-type(1) .form-label",
  ".home-hero-signup > dl:nth-of-type(1) > dd",
  ".home-hero-signup > dl:nth-of-type(1) .form-control",
  ".home-hero-signup > dl:nth-of-type(2)",
  ".home-hero-signup > dl:nth-of-type(2) > .input-label",
  ".home-hero-signup > dl:nth-of-type(2) .form-label",
  ".home-hero-signup > dl:nth-of-type(2) > dd",
  ".home-hero-signup > dl:nth-of-type(2) .form-control",
  ".home-hero-signup > dl:nth-of-type(3)",
  ".home-hero-signup > dl:nth-of-type(3) > .input-label",
  "dl:nth-child(4) .form-label",
  ".home-hero-signup > dl:nth-of-type(3) > dd",
  "dl:nth-child(4) .form-control",
  ".form-group > .form-control-note",
  ".home-hero-signup > [name="source"]",
  ".home-hero-signup > input:nth-of-type(2)",
  ".home-hero-signup > [name="timestamp"]",
  ".home-hero-signup > input:nth-of-type(4)",
  ".home-hero-signup > .btn",
  ".text-gray > .home-hero-signup > .form-control-note",
  "p:nth-child(10) > a:nth-of-type(1)",
  "p:nth-child(10) > a:nth-of-type(2)",
  "p:nth-child(10) > span",
  ".flex-items-center > div:nth-of-type(3)",
  "[rel="nofollow"]",
  ".application-main > div:nth-of-type(2)",
  ".application-main > div:nth-of-type(2) > div:nth-of-type(1)",
  "div:nth-of-type(2) .text-normal",
  "div:nth-of-type(2) h2",
  "div:nth-of-type(2) .lead",
  ".featurette > div > div:nth-child(4)",
  "div > .btn-outline",
  ".application-main > div:nth-of-type(2) > div:nth-of-type(2)",
  ".featurette > div > .position-relative",
  ".overflow-hidden > div:nth-of-type(1)",
  ".position-relative > div > .width-fit",
  ".position-relative > div:nth-of-type(2)",
  ".position-relative > div > a:nth-of-type(1)",
  "a:nth-of-type(1) > .summarylink-illustration",
  "a:nth-of-type(1) .width-fit",
  "div:nth-of-type(2) > a:nth-of-type(1) > .summarylink-btn",
  "a:nth-of-type(1) > .summarylink-btn > div",
  "a:nth-of-type(1) h3",
  "a:nth-of-type(1) > .summarylink-btn > div > p",
  "a:nth-of-type(1) p > .text-blue",
  "a:nth-of-type(1) > .summarylink-btn > .text-blue",
  "a:nth-of-type(1) .text-blue > path",
  ".position-relative > div > a:nth-of-type(2)",
  "a:nth-of-type(2) > .summarylink-illustration",
  "a:nth-of-type(2) .width-fit",
  "div:nth-of-type(2) > a:nth-of-type(2) > .summarylink-btn",
  "a:nth-of-type(2) > .summarylink-btn > div",
  "a:nth-of-type(2) h3",
  "a:nth-of-type(2) > .summarylink-btn > div > p",
  "a:nth-of-type(2) > .summarylink-btn > div .text-blue",
  "div:nth-of-type(2) > a:nth-of-type(2) .octicon",
  "div:nth-of-type(2) > a:nth-of-type(2) path",
  ".position-relative > div > a:nth-of-type(3)",
  "a:nth-of-type(3) > .summarylink-illustration",
  "a:nth-of-type(3) .width-fit",
  "div:nth-of-type(2) > a:nth-of-type(3) > .summarylink-btn",
  "a:nth-of-type(3) > .summarylink-btn > div",
  "a:nth-of-type(3) h3",
  "a:nth-of-type(3) > .summarylink-btn > div > p",
  "a:nth-of-type(3) p > .text-blue",
  "a:nth-of-type(3) > .summarylink-btn > .text-blue",
  "a:nth-of-type(3) .text-blue > path",
  ".application-main > div:nth-of-type(3)",
  ".application-main > div:nth-of-type(3) > div",
  "div:nth-of-type(3) .text-normal",
  "div:nth-of-type(3) h2",
  "div:nth-of-type(3) > div > .lead",
  ".featurette > div > p:nth-of-type(2)",
  ".border-top > div > .text-center > .btn",
  ".flex-row-reverse",
  ".flex-row-reverse > .text-center",
  ".text-center > .width-fit",
  ".flex-row-reverse > div:nth-of-type(2)",
  ".flex-row-reverse h3:nth-of-type(1)",
  ".flex-row-reverse p:nth-of-type(1)",
  "h3:nth-of-type(2)",
  ".flex-items-center p:nth-of-type(2)",
  ".clearfix",
  ".float-left",
  ".float-left > svg",
  "svg > title",
  ".float-left path:nth-of-type(1)",
  "path:nth-of-type(2)",
  ".clearfix > .overflow-hidden",
  ".overflow-hidden > h4",
  ".overflow-hidden > p:nth-of-type(1)",
  ".overflow-hidden > p:nth-of-type(2)",
  ".overflow-hidden > p > a",
  "p:nth-child(3) > a > span",
  "p:nth-child(3) .octicon",
  "p:nth-child(3) path",
  ".application-main > div:nth-of-type(4)",
  ".border-top > .text-center",
  ".text-center > div:nth-of-type(1)",
  ".text-center .text-normal",
  ".text-center > div > h2",
  ".text-center .lead",
  ".text-center .text-center",
  ".text-center .text-center > .btn",
  ".apps-cluster",
  ".apps-cluster > div:nth-of-type(1)",
  ".apps-cluster > div:nth-of-type(1) > img",
  ".apps-cluster > div:nth-of-type(2)",
  "div:nth-of-type(2) > img",
  ".apps-cluster > div:nth-of-type(3)",
  "div:nth-of-type(3) > img",
  ".apps-cluster > div:nth-of-type(4)",
  "div:nth-of-type(4) > img",
  ".apps-cluster > div:nth-of-type(5)",
  "div:nth-of-type(5) > img",
  ".apps-cluster > div:nth-of-type(6)",
  "div:nth-of-type(6) > img",
  ".apps-cluster > div:nth-of-type(7)",
  "div:nth-of-type(7) > img",
  ".text-center > div:nth-of-type(3)",
  ".text-center .alt-text-small",
  "div:nth-of-type(3) > p:nth-of-type(2)",
  "div:nth-of-type(3) > p > a",
  "p:nth-child(2) > a > span",
  "p:nth-child(2) .octicon",
  "p:nth-child(2) path",
  ".application-main > div:nth-of-type(5)",
  ".application-main > div:nth-of-type(5) > div:nth-of-type(1)",
  "div:nth-of-type(5) .text-normal",
  "div:nth-of-type(5) h2",
  "br",
  "div:nth-of-type(5) > div:nth-of-type(1) > .lead",
  ".flex-nowrap",
  "article:nth-of-type(1)",
  "article:nth-of-type(1) > .story-link",
  "article:nth-of-type(1) .position-relative",
  "article:nth-of-type(1) .position-relative > .width-full",
  "article:nth-of-type(1) .flex-items-center",
  "article:nth-of-type(1) .flex-items-center > .width-full",
  "article:nth-of-type(1) .story-title",
  "article:nth-of-type(1) .text-gray",
  "article:nth-of-type(2)",
  "article:nth-of-type(2) > .story-link",
  "article:nth-of-type(2) .position-relative",
  "article:nth-of-type(2) .position-relative > .width-full",
  "article:nth-of-type(2) .flex-items-center",
  "article:nth-of-type(2) .flex-items-center > .width-full",
  "article:nth-of-type(2) .story-title",
  "article:nth-of-type(2) .text-gray",
  "article:nth-of-type(3)",
  "article:nth-of-type(3) > .story-link",
  "article:nth-of-type(3) .position-relative",
  "article:nth-of-type(3) .position-relative > .width-full",
  "article:nth-of-type(3) .flex-items-center",
  "article:nth-of-type(3) .flex-items-center > .width-full",
  "article:nth-of-type(3) .story-title",
  "article:nth-of-type(3) .text-gray",
  "article:nth-of-type(4)",
  "article:nth-of-type(4) > .story-link",
  "article:nth-of-type(4) .position-relative",
  "article:nth-of-type(4) .position-relative > .width-full",
  "article:nth-of-type(4) .flex-items-center",
  "article:nth-of-type(4) .flex-items-center > .width-full",
  "article:nth-of-type(4) .story-title",
  "article:nth-of-type(4) .text-gray",
  "article:nth-of-type(5)",
  "article:nth-of-type(5) > .story-link",
  "article:nth-of-type(5) .position-relative",
  "article:nth-of-type(5) .position-relative > .width-full",
  "article:nth-of-type(5) .flex-items-center",
  "article:nth-of-type(5) .flex-items-center > .width-full",
  "article:nth-of-type(5) .story-title",
  "article:nth-of-type(5) .text-gray",
  "article:nth-of-type(6)",
  "article:nth-of-type(6) > .story-link",
  "article:nth-of-type(6) .position-relative",
  "article:nth-of-type(6) .position-relative > .width-full",
  "article:nth-of-type(6) .flex-items-center",
  "article:nth-of-type(6) .flex-items-center > .width-full",
  "article:nth-of-type(6) .story-title",
  "article:nth-of-type(6) .text-gray",
  "article:nth-of-type(7)",
  "article:nth-of-type(7) > .story-link",
  "article:nth-of-type(7) .position-relative",
  "article:nth-of-type(7) .position-relative > .width-full",
  "article:nth-of-type(7) .flex-items-center",
  "article:nth-of-type(7) .flex-items-center > .width-full",
  "article:nth-of-type(7) .story-title",
  "article:nth-of-type(7) .text-gray",
  ".featurette > div:nth-of-type(3)",
  "div:nth-of-type(3) > .lead",
  ".featurette > div:nth-of-type(3) > div:nth-of-type(1)",
  "div:nth-of-type(3) .position-relative",
  "div > .position-relative > a:nth-of-type(1)",
  "a:nth-of-type(1) > .circle",
  "a:nth-of-type(1) > .circle > span:nth-of-type(1)",
  "a:nth-of-type(1) span:nth-of-type(2)",
  ".position-relative > a:nth-of-type(1) > .summarylink-btn",
  "a:nth-of-type(1) > .summarylink-btn > p",
  "p > .text-orange-light",
  ".summarylink-btn > .text-orange-light",
  ".text-orange-light > path",
  ".position-relative > a:nth-of-type(2)",
  "a:nth-of-type(2) > .circle",
  "a:nth-of-type(2) > .circle > span:nth-of-type(1)",
  "a:nth-of-type(2) span:nth-of-type(2)",
  ".position-relative > a:nth-of-type(2) > .summarylink-btn",
  "a:nth-of-type(2) > .summarylink-btn > p",
  ".summarylink-btn > p > .text-blue",
  ".position-relative > .summarylink > .summarylink-btn > .text-blue",
  ".position-relative > .summarylink .text-blue > path",
  ".position-relative > a:nth-of-type(3)",
  "a:nth-of-type(3) > .circle",
  "a:nth-of-type(3) > .circle > span:nth-of-type(1)",
  "a:nth-of-type(3) span:nth-of-type(2)",
  ".position-relative > a:nth-of-type(3) > .summarylink-btn",
  "a:nth-of-type(3) > .summarylink-btn > p",
  "p > .text-purple",
  ".summarylink-btn > .text-purple",
  ".text-purple > path",
  "div:nth-of-type(3) > div:nth-of-type(2)",
  ".text-gray-light",
  ".grayscale",
  ".flex-justify-center > li:nth-of-type(1)",
  "li:nth-of-type(1) > img",
  ".flex-justify-center > li:nth-of-type(2)",
  "li:nth-of-type(2) > img",
  ".flex-justify-center > li:nth-of-type(3)",
  "li:nth-of-type(3) > img",
  ".flex-justify-center > li:nth-of-type(4)",
  "li:nth-of-type(4) > img",
  ".flex-justify-center > li:nth-of-type(5)",
  "li:nth-of-type(5) > img",
  ".flex-justify-center > li:nth-of-type(6)",
  "li:nth-of-type(6) > img",
  ".flex-justify-center > li:nth-of-type(7)",
  "li:nth-of-type(7) > img",
  ".flex-justify-center > li:nth-of-type(8)",
  "li:nth-of-type(8) > img",
  "li:nth-of-type(9)",
  "li:nth-of-type(9) > img",
  "li:nth-of-type(10)",
  "li:nth-of-type(10) > img",
  "li:nth-of-type(11)",
  "li:nth-of-type(11) > img",
  "li:nth-of-type(12)",
  "li:nth-of-type(12) > img",
  ".application-main > div:nth-of-type(6)",
  ".featurette > .text-white",
  ".text-white > h2",
  "div:nth-of-type(6) > div:nth-of-type(2)",
  ".featurette .home-hero-signup",
  "div:nth-of-type(2) > .home-hero-signup > div:nth-of-type(1)",
  "div:nth-of-type(2) > .home-hero-signup [name="utf8"]",
  "div:nth-of-type(2) > .home-hero-signup > div:nth-of-type(1) > input:nth-of-type(2)",
  ".home-hero-signup > .flex-wrap",
  ".flex-wrap > dl:nth-of-type(1)",
  ".flex-wrap > dl:nth-of-type(1) > .input-label",
  "dl:nth-of-type(1) .text-gray",
  ".flex-wrap > dl:nth-of-type(1) > dd",
  "dl:nth-child(1) .form-control",
  ".flex-wrap > dl:nth-of-type(2)",
  ".flex-wrap > dl:nth-of-type(2) > .input-label",
  "dl:nth-of-type(2) .text-gray",
  ".flex-wrap > dl:nth-of-type(2) > dd",
  ".flex-wrap > dl:nth-of-type(2) .form-control",
  ".flex-wrap > dl:nth-of-type(3)",
  ".flex-wrap > dl:nth-of-type(3) > .input-label",
  "dl:nth-of-type(3) .text-gray",
  ".flex-wrap > dl:nth-of-type(3) > dd",
  ".flex-wrap > dl:nth-of-type(3) .form-control",
  ".flex-wrap > [name="source"]",
  ".flex-wrap > input:nth-of-type(2)",
  ".flex-wrap > [name="timestamp"]",
  ".flex-wrap > input:nth-of-type(4)",
  ".home-hero-signup > .flex-wrap > div",
  "div > .btn-block",
  "div:nth-of-type(2) > .home-hero-signup > .form-control-note",
  ".home-hero-signup > p:nth-child(3) > a:nth-of-type(1)",
  "p:nth-child(3) > a:nth-of-type(2)",
  "p:nth-child(3) > span",
  ".application-main > div:nth-of-type(7)",
  ".footer",
  ".footer > .flex-wrap",
  ".footer > .flex-wrap > div:nth-of-type(1)",
  ".octicon-logo-github",
  ".octicon-logo-github > path",
  ".flex-wrap > div > .alt-text-small",
  ".footer div:nth-of-type(2)",
  ".flex-wrap > div:nth-of-type(2) > h4",
  ".flex-wrap > div:nth-of-type(2) > .text-gray",
  ".text-gray > li:nth-of-type(1)",
  ".text-gray > li:nth-of-type(1) > .muted-link",
  ".text-gray > li:nth-of-type(2)",
  ".text-gray > li:nth-of-type(2) > .muted-link",
  ".text-gray > li:nth-of-type(3)",
  ".text-gray > li:nth-of-type(3) > .muted-link",
  ".text-gray > li:nth-of-type(4)",
  ".text-gray > li:nth-of-type(4) > .muted-link",
  ".text-gray > li:nth-of-type(5)",
  ".text-gray > li:nth-of-type(5) > .muted-link",
  ".footer div:nth-of-type(3)",
  "div:nth-of-type(3) > h4",
  "div:nth-of-type(3) > ul",
  "div:nth-of-type(3) > ul > li:nth-of-type(1)",
  "div:nth-of-type(3) li:nth-of-type(1) > .muted-link",
  "div:nth-of-type(3) > ul > li:nth-of-type(2)",
  "div:nth-of-type(3) li:nth-of-type(2) > .muted-link",
  "div:nth-of-type(3) > ul > li:nth-of-type(3)",
  "div:nth-of-type(3) li:nth-of-type(3) > .muted-link",
  "div:nth-of-type(3) > ul > li:nth-of-type(4)",
  "div:nth-of-type(3) li:nth-of-type(4) > .muted-link",
  ".footer div:nth-of-type(4)",
  "div:nth-of-type(4) > h4",
  "div:nth-of-type(4) > ul",
  "div:nth-of-type(4) > ul > li:nth-of-type(1)",
  "div:nth-of-type(4) li:nth-of-type(1) > .muted-link",
  "div:nth-of-type(4) > ul > li:nth-of-type(2)",
  "div:nth-of-type(4) li:nth-of-type(2) > .muted-link",
  "div:nth-of-type(4) > ul > li:nth-of-type(3)",
  "div:nth-of-type(4) li:nth-of-type(3) > .muted-link",
  "div:nth-of-type(4) > ul > li:nth-of-type(4)",
  "div:nth-of-type(4) li:nth-of-type(4) > .muted-link",
  "div:nth-of-type(4) > ul > li:nth-of-type(5)",
  "div:nth-of-type(4) li:nth-of-type(5) > .muted-link",
  "div:nth-of-type(4) > ul > li:nth-of-type(6)",
  "div:nth-of-type(4) li:nth-of-type(6) > .muted-link",
  "div:nth-of-type(4) > ul > li:nth-of-type(7)",
  "div:nth-of-type(4) li:nth-of-type(7) > .muted-link",
  ".footer div:nth-of-type(5)",
  "div:nth-of-type(5) > h4",
  "div:nth-of-type(5) > ul",
  "div:nth-of-type(5) > ul > li:nth-of-type(1)",
  "div:nth-of-type(5) > ul > li:nth-of-type(1) > .muted-link",
  "div:nth-of-type(5) > ul > li:nth-of-type(2)",
  "div:nth-of-type(5) > ul > li:nth-of-type(2) > .muted-link",
  "div:nth-of-type(5) > ul > li:nth-of-type(3)",
  "div:nth-of-type(5) > ul > li:nth-of-type(3) > .muted-link",
  "div:nth-of-type(5) > ul > li:nth-of-type(4)",
  "div:nth-of-type(5) > ul > li:nth-of-type(4) > .muted-link",
  "div:nth-of-type(5) > ul > li:nth-of-type(5)",
  "div:nth-of-type(5) > ul > li:nth-of-type(5) > .muted-link",
  ".footer div:nth-of-type(6)",
  "div:nth-of-type(6) > h4",
  "div:nth-of-type(6) > ul",
  "div:nth-of-type(6) li:nth-of-type(1)",
  "div:nth-of-type(6) li:nth-of-type(1) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(2)",
  "div:nth-of-type(6) li:nth-of-type(2) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(3)",
  "div:nth-of-type(6) li:nth-of-type(3) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(4)",
  "div:nth-of-type(6) li:nth-of-type(4) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(5)",
  "div:nth-of-type(6) li:nth-of-type(5) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(6)",
  "div:nth-of-type(6) li:nth-of-type(6) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(7)",
  "div:nth-of-type(6) li:nth-of-type(7) > .muted-link",
  "div:nth-of-type(6) li:nth-of-type(8)",
  "li:nth-of-type(8) > .muted-link",
  "#ajax-error-message",
  "#ajax-error-message > .octicon",
  "#ajax-error-message > .octicon > path",
  ".flash-close",
  ".flash-close > .octicon",
  ".flash-close path",
  "script:nth-of-type(1)",
  "script:nth-of-type(2)",
  ".stale-session-flash",
  ".stale-session-flash > .octicon",
  ".stale-session-flash path",
  ".stale-session-flash > span:nth-of-type(1)",
  "span:nth-of-type(1) > a",
  ".signed-out-tab-flash",
  ".signed-out-tab-flash > a",
  "#facebox",
  ".facebox-popup",
  ".facebox-content",
  ".facebox-close",
  ".facebox-close > .octicon",
  ".facebox-close path",
]
`;

exports[`google 1`] = `
[
  "noscript a",
  "div:nth-of-type(1) > a:nth-of-type(2)",
  ".logo > a",
  "[data-alt="true"] > div:nth-of-type(2) > a",
  "a:nth-child(13)",
  "#gbwa [role="button"]",
  "[role="dialog"] div:nth-of-type(2) > a",
  "div:nth-child(8) > a:nth-of-type(1)",
  "div:nth-of-type(7) > a:nth-of-type(2)",
  "div > a:nth-of-type(3)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(4) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(5) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(6) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "div:nth-of-type(2) > div > div > div > div > div > .truncation-information",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(7) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(8) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(9) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(10) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  "div:nth-child(2) > div > div > div > div > span > a",
  "div:nth-of-type(3) > div > div > div > div > a",
  "html > body:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1) > div:nth-of-type(13) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(12) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > span:nth-of-type(1) > a:nth-of-type(1)",
  ".fbar > div > div > [role="button"]",
  "#fsl > a:nth-of-type(1)",
  "[data-bucket="websearch"]",
  "#fsl > a:nth-of-type(3)",
  "a:nth-of-type(4)",
  "div:nth-of-type(1) > link",
  "div:nth-of-type(2) > link",
]
`;

exports[`stripe 1`] = `
[
  "html",
  "head",
  "meta:nth-of-type(1)",
  "[name="google-site-verification"]",
  "[name="viewport"]",
  "head > title",
  "[name="description"]",
  "head > link:nth-of-type(1)",
  "[rel="apple-touch-icon-precomposed"]",
  "[rel="icon"]",
  "link:nth-of-type(4)",
  "[rel="alternate"]",
  "[rel="canonical"]",
  "meta:nth-of-type(5)",
  "meta:nth-of-type(6)",
  "meta:nth-of-type(7)",
  "meta:nth-of-type(8)",
  "meta:nth-of-type(9)",
  "meta:nth-of-type(10)",
  "meta:nth-of-type(11)",
  "meta:nth-of-type(12)",
  "meta:nth-of-type(13)",
  "head > script:nth-of-type(1)",
  "link:nth-of-type(7)",
  "link:nth-of-type(8)",
  "head > script:nth-of-type(2)",
  "head > script:nth-of-type(3)",
  "script:nth-of-type(4)",
  "body",
  "body > header",
  "body > header > div:nth-of-type(1)",
  ".navRoot",
  ".logo",
  ".item-home",
  ".rootLink > h1",
  "h1 > svg",
  "svg > title",
  "h1 path",
  ".primary",
  ".item-products",
  ".item-developers",
  ".item-company",
  ".navSection > .item-pricing",
  ".secondary",
  ".item-support",
  ".item-dashboard",
  ".mobile",
  ".item-mobileMenu",
  ".rootLink > h2",
  ".navSection > .popup",
  ".popupContainer",
  ".popupCloseButton",
  ".mobileProducts",
  ".mobileProducts > h4",
  ".mobileProductsList",
  ".mobileProductsList > ul:nth-of-type(1)",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(1)",
  ".mobileProductsList .item-payments",
  ".mobileProductsList .item-payments > svg",
  ".mobileProductsList .item-payments .hover-fillLight",
  ".mobileProductsList .item-payments .hover-fillDark",
  ".mobileProductsList .item-payments path:nth-of-type(3)",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(2)",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(2) > .linkContainer",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(2) svg",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(2) .hover-fillLight",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(2) path:nth-of-type(2)",
  ".mobileProductsList > ul:nth-of-type(1) > li:nth-of-type(2) .hover-fillDark",
  ".mobileProductsList li:nth-of-type(3)",
  ".mobileProductsList .item-connect",
  ".mobileProductsList .item-connect > svg",
  ".mobileProductsList .item-connect .hover-fillLight",
  ".mobileProductsList .item-connect path:nth-of-type(2)",
  ".mobileProductsList .item-connect .hover-fillDark",
  ".mobileProductsList li:nth-of-type(4)",
  "li:nth-of-type(4) > .item-sigma",
  "li:nth-of-type(4) > .linkContainer > svg",
  "li:nth-of-type(4) > .linkContainer > svg > .hover-fillLight",
  "li:nth-of-type(4) > .linkContainer > svg > .hover-fillDark",
  "li:nth-of-type(4) > .linkContainer path:nth-of-type(3)",
  ".linkContainer > .new-badge",
  ".mobileProductsList > ul:nth-of-type(2)",
  ".mobileProductsList > ul:nth-of-type(2) > li:nth-of-type(1)",
  "li:nth-of-type(1) > .item-atlas",
  "li:nth-of-type(1) > .item-atlas > svg",
  "li:nth-of-type(1) > .item-atlas .hover-fillLight",
  "li:nth-of-type(1) > .item-atlas .hover-fillDark",
  "li:nth-of-type(1) > .item-atlas path:nth-of-type(3)",
  ".mobileProductsList > ul:nth-of-type(2) > li:nth-of-type(2)",
  "li:nth-of-type(2) > .item-radar",
  "li:nth-of-type(2) > .item-radar > svg",
  "li:nth-of-type(2) > .item-radar .hover-fillLight",
  "li:nth-of-type(2) > .item-radar path:nth-of-type(2)",
  "li:nth-of-type(2) > .item-radar .hover-fillDark",
  ".popupContainer > div:nth-of-type(2)",
  ".popupContainer > div > ul:nth-of-type(1)",
  "div:nth-child(3) > ul:nth-child(1) > li:nth-of-type(1)",
  "li:nth-of-type(1) > .item-pricing",
  "div:nth-child(3) > ul:nth-child(1) > li:nth-of-type(2)",
  "li:nth-of-type(2) > [data-analytics-action="works-with"]",
  "div:nth-child(3) > ul:nth-child(1) > li:nth-of-type(3)",
  ".item-gallery",
  "div:nth-of-type(2) > ul:nth-child(1) > li:nth-of-type(4)",
  "li > .item-documentation",
  ".popupContainer > div > ul:nth-of-type(2)",
  "div:nth-of-type(2) > ul:nth-of-type(2) > li:nth-of-type(1)",
  "ul:nth-of-type(2) .item-about",
  "div:nth-of-type(2) > ul:nth-of-type(2) > li:nth-of-type(2)",
  "li:nth-of-type(2) > .item-jobs",
  "div:nth-of-type(2) > ul:nth-of-type(2) > li:nth-of-type(3)",
  "li > .item-blog",
  ".popupContainer > a:nth-of-type(2)",
  ".dropdownRoot",
  ".dropdownRoot > div:nth-of-type(1)",
  ".dropdownRoot > div:nth-of-type(1) > div",
  ".dropdownArrow",
  ".dropdownContainer",
  ".dropdownContainer > [data-dropdown="products"]",
  "[data-dropdown="products"] > .dropdownContent",
  "[data-dropdown="products"] > .dropdownContent > div:nth-of-type(1)",
  ".productsGroupPrimary",
  ".productsGroupPrimary > li:nth-of-type(1)",
  ".productsGroupPrimary .item-payments",
  ".productsGroupPrimary .item-payments > svg",
  ".productsGroupPrimary .item-payments .hover-fillLight",
  ".productsGroupPrimary .item-payments .hover-fillDark",
  ".productsGroupPrimary .item-payments path:nth-of-type(3)",
  ".item-payments > .productLinkContent",
  ".item-payments .linkTitle",
  ".item-payments p",
  ".productsGroupPrimary > li:nth-of-type(2)",
  ".productsGroupPrimary > li:nth-of-type(2) > .linkContainer",
  ".productsGroupPrimary > li:nth-of-type(2) svg",
  ".productsGroupPrimary > li:nth-of-type(2) .hover-fillLight",
  ".productsGroupPrimary > li:nth-of-type(2) path:nth-of-type(2)",
  ".productsGroupPrimary > li:nth-of-type(2) .hover-fillDark",
  ".productsGroupPrimary > li:nth-of-type(2) .productLinkContent",
  ".productsGroupPrimary > li:nth-of-type(2) .linkTitle",
  ".productsGroupPrimary > li:nth-of-type(2) p",
  ".productsGroupPrimary > li:nth-of-type(3)",
  ".productsGroupPrimary .item-connect",
  ".productsGroupPrimary .item-connect > svg",
  ".productsGroupPrimary .item-connect .hover-fillLight",
  ".productsGroupPrimary .item-connect path:nth-of-type(2)",
  ".productsGroupPrimary .item-connect .hover-fillDark",
  ".item-connect > .productLinkContent",
  ".item-connect .linkTitle",
  ".item-connect p",
  ".dropdownContent > div:nth-of-type(2)",
  ".productsGroupSecondary",
  ".productsGroupSecondary > li:nth-of-type(1)",
  ".productsGroupSecondary .item-sigma",
  "li:nth-of-type(1) > .item-sigma > svg",
  "li:nth-of-type(1) > .item-sigma .hover-fillLight",
  "li:nth-of-type(1) > .item-sigma .hover-fillDark",
  "li:nth-of-type(1) > .item-sigma path:nth-of-type(3)",
  ".item-sigma > .productLinkContent",
  ".item-sigma .linkTitle",
  ".linkTitle > .new-badge",
  ".item-sigma p",
  ".productsGroupSecondary > li:nth-of-type(2)",
  ".productsGroupSecondary .item-atlas",
  "li:nth-of-type(2) > .item-atlas > svg",
  "li:nth-of-type(2) > .item-atlas .hover-fillLight",
  "li:nth-of-type(2) > .item-atlas .hover-fillDark",
  "li:nth-of-type(2) > .item-atlas path:nth-of-type(3)",
  ".item-atlas > .productLinkContent",
  ".item-atlas .linkTitle",
  ".item-atlas p",
  ".productsGroupSecondary > li:nth-of-type(3)",
  ".productsGroupSecondary .item-radar",
  "li:nth-of-type(3) > .item-radar > svg",
  "li:nth-of-type(3) > .item-radar .hover-fillLight",
  "li:nth-of-type(3) > .item-radar path:nth-of-type(2)",
  "li:nth-of-type(3) > .item-radar .hover-fillDark",
  ".item-radar > .productLinkContent",
  ".item-radar .linkTitle",
  ".item-radar p",
  ".prodsubGroup",
  ".prodsubGroup > li",
  ".prodsubGroup .linkContainer",
  "[data-analytics-action="works-with"] > .linkTitle",
  "[data-analytics-action="works-with"] svg",
  "[data-analytics-action="works-with"] path:nth-of-type(1)",
  "[data-analytics-action="works-with"] .hover-fillDark",
  "[data-analytics-action="works-with"] path:nth-of-type(3)",
  ".dropdownContainer > [data-dropdown="developers"]",
  "[data-dropdown="developers"] > .dropdownContent",
  ".documentationGroup",
  ".documentationGroup > .linkContainer",
  ".item-documentation > .linkTitle",
  ".item-documentation svg",
  ".item-documentation .hover-fillLight",
  ".item-documentation .hover-fillDark",
  ".withIcon > span",
  ".documentationArticles",
  ".documentationArticles > ul:nth-of-type(1)",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(1)",
  "ul:nth-of-type(1) > li > h4",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(2)",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(2) > a",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(3)",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(3) > a",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(4)",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(4) > a",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(5)",
  ".documentationArticles > ul:nth-of-type(1) > li:nth-of-type(5) > a",
  ".documentationArticles > ul:nth-of-type(2)",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(1)",
  "ul:nth-of-type(2) h4",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(2)",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(2) > a",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(3)",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(3) > a",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(4)",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(4) > a",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(5)",
  ".documentationArticles > ul:nth-of-type(2) > li:nth-of-type(5) > a",
  ".developersGroup",
  ".developersGroup > li:nth-of-type(1)",
  ".item-apiReference",
  ".item-apiReference > .linkTitle",
  ".item-apiReference svg",
  ".item-apiReference .hover-strokeDark",
  ".developersGroup > li:nth-of-type(2)",
  ".item-apiStatus",
  ".item-apiStatus > .linkTitle",
  ".item-apiStatus svg",
  ".item-apiStatus .hover-strokeDark",
  ".developersGroup > li:nth-of-type(3)",
  ".item-openSource",
  ".item-openSource > .linkTitle",
  ".item-openSource svg",
  ".item-openSource .hover-fillDark",
  ".dropdownContainer > [data-dropdown="company"]",
  "[data-dropdown="company"] > .dropdownContent",
  ".companyGroup",
  ".companyGroup > li:nth-of-type(1)",
  ".linkGroup .item-about",
  ".item-about > .linkTitle",
  ".item-about svg",
  ".item-about .hover-fillDark",
  ".companyGroup > li:nth-of-type(2)",
  ".item-customers",
  ".item-customers > .linkTitle",
  ".item-customers svg",
  ".item-customers path:nth-of-type(1)",
  ".item-customers .hover-fillDark",
  ".item-customers path:nth-of-type(3)",
  ".companyGroup > li:nth-of-type(3)",
  ".linkGroup .item-jobs",
  ".item-jobs > .linkTitle",
  ".item-jobs svg",
  ".item-jobs path:nth-of-type(1)",
  ".item-jobs .hover-fillLight",
  ".item-jobs path:nth-of-type(3)",
  ".linkGroup > li:nth-of-type(4)",
  ".item-environment",
  ".item-environment > .linkTitle",
  ".item-environment svg",
  ".item-environment .hover-fillLight",
  ".item-environment .hover-fillDark",
  ".blogGroup",
  ".blogGroup > .linkContainer",
  ".item-blog > .linkTitle",
  ".item-blog svg",
  ".item-blog .hover-fillLight",
  ".item-blog .hover-fillDark",
  ".blogPosts",
  ".blogPosts > li:nth-of-type(1)",
  ".blogPosts > li:nth-of-type(1) > a",
  "li:nth-of-type(1) .title",
  "li:nth-of-type(1) > a > .new-badge",
  ".blogPosts > li:nth-of-type(2)",
  ".blogPosts > li:nth-of-type(2) > a",
  "li:nth-of-type(2) .title",
  "li:nth-of-type(2) .new-badge",
  ".blogPosts > li:nth-of-type(3)",
  ".blogPosts > li:nth-of-type(3) > a",
  "li:nth-of-type(3) .title",
  ".globalContent",
  "main",
  "main > header",
  "#stripes",
  "#stripes > span:nth-of-type(1)",
  "#stripes > span:nth-of-type(2)",
  "span:nth-of-type(3)",
  "span:nth-of-type(4)",
  "span:nth-of-type(5)",
  "#intro",
  "#intro > div",
  ".announcement",
  ".new-pill",
  ".message",
  "#intro h1",
  "#intro p",
  "#intro ul",
  "ul:nth-child(4) > li:nth-of-type(1)",
  "ul:nth-child(4) > li:nth-of-type(1) > a",
  "ul:nth-child(4) > li:nth-of-type(2)",
  "ul:nth-child(4) > li:nth-of-type(2) > a",
  "#app-illustrations",
  "#app-illustrations > div:nth-of-type(1)",
  "div:nth-of-type(1) > img",
  ".phone-big",
  ".phone-big > img",
  ".phone-small",
  ".phone-small > img",
  ".tablet-portrait",
  ".tablet-portrait > img",
  "#primary",
  "#complete-toolkit",
  "#complete-toolkit > h2",
  "#complete-toolkit .heading-icon",
  "#complete-toolkit .heading-icon > circle",
  "#complete-toolkit path",
  "g:nth-of-type(1)",
  "g:nth-of-type(1) > rect",
  "g:nth-of-type(1) > circle",
  "g:nth-of-type(2)",
  "g:nth-of-type(2) > rect",
  "g:nth-of-type(2) > circle",
  "h2 > span",
  "#complete-toolkit > p",
  "#complete-toolkit > a",
  "#developers-first",
  "#programming-languages",
  "#developers-first > h2",
  "#developers-first .heading-icon",
  "h2:nth-child(2) circle:nth-of-type(1)",
  "h2:nth-child(2) path:nth-of-type(1)",
  "circle:nth-of-type(2)",
  ".heading-icon > path:nth-child(4)",
  "circle:nth-of-type(3)",
  "#developers-first > p",
  "#notebook",
  "nav",
  "select",
  "option:nth-of-type(1)",
  "option:nth-of-type(2)",
  "option:nth-of-type(3)",
  "option:nth-of-type(4)",
  "#api-method-selection",
  "nav > ul",
  "nav li:nth-of-type(1)",
  "li:nth-of-type(1) > button",
  "li:nth-of-type(1) > button > svg",
  "li:nth-of-type(1) > button path",
  "nav li:nth-of-type(2)",
  "li:nth-of-type(2) > button",
  "li:nth-of-type(2) > button > svg",
  "li:nth-of-type(2) > button path",
  "nav li:nth-of-type(3)",
  "li:nth-of-type(3) > button",
  "li:nth-of-type(3) > button > svg",
  "li:nth-of-type(3) > button path",
  "nav li:nth-of-type(4)",
  "li:nth-of-type(4) > button",
  "li:nth-of-type(4) > button > svg",
  "li:nth-of-type(4) > button path",
  "nav > a",
  "#editor",
  "#prism",
  "pre",
  ".custom-line-numbers",
  ".language-javascript",
  "#runkit",
  "#runkit-warning",
  "#runkit-warning > p",
  "#secondary",
  ".cols",
  "#always-improving",
  "#always-improving > h2",
  "#always-improving .heading-icon",
  "#always-improving circle",
  "#always-improving path:nth-of-type(1)",
  "h2:nth-child(1) path:nth-of-type(2)",
  "#always-improving > p",
  "#always-improving > a",
  "#global-scale",
  "#global-scale > h2",
  "#global-scale .heading-icon",
  "#global-scale circle",
  ".heading-icon > rect",
  "#global-scale path",
  "#global-scale > p",
  "#global-scale > a",
  "#customer-logos",
  "#customer-logos > a",
  "#customer-logos span",
  "a > ul",
  "a li:nth-of-type(1)",
  "li:nth-of-type(1) > img",
  "a li:nth-of-type(2)",
  ".instacart",
  "a li:nth-of-type(3)",
  ".pinterest",
  "a li:nth-of-type(4)",
  "li:nth-of-type(4) > img",
  "a li:nth-of-type(5)",
  ".shopify",
  "a li:nth-of-type(6)",
  ".opentable",
  "a li:nth-of-type(7)",
  ".slack",
  ".globalFooter",
  ".globalFooterCards",
  ".globalFooterCards > div",
  ".card-sigma",
  ".card-sigma > svg",
  ".card-sigma .hover-fillLight",
  ".card-sigma path:nth-of-type(1)",
  ".card-sigma path:nth-of-type(2)",
  ".card-sigma path:nth-of-type(3)",
  ".card-sigma path:nth-of-type(4)",
  ".card-sigma > h2",
  ".card-sigma > p",
  ".card-documentation",
  ".card-documentation > svg",
  ".card-documentation .hover-fillDark",
  ".card-documentation .hover-fillLight",
  ".card-documentation path:nth-of-type(3)",
  ".card-documentation path:nth-of-type(4)",
  ".card-documentation > h2",
  ".card-documentation > p",
  "article:nth-of-type(1)",
  "article:nth-of-type(1) > div",
  ".content",
  ".content > .title",
  ".subtitle",
  ".buttons",
  ".buttons > a:nth-of-type(1)",
  ".buttons > a:nth-of-type(2)",
  ".globalFooter > script",
  "article:nth-of-type(2)",
  "article:nth-of-type(2) > div",
  "article > div > ul",
  "article > div > ul > li:nth-of-type(1)",
  "article li:nth-of-type(1) > .rootLink",
  "li:nth-of-type(1) > .rootLink > svg",
  "li:nth-of-type(1) > .rootLink > svg > path",
  "li:nth-of-type(1) > .popup",
  ".select > .popup > div:nth-of-type(1)",
  ".popup > div > h4",
  ".popup > div > h4 > a",
  ".columns",
  ".columns > ul:nth-of-type(1)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(1)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(1) > a",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(1) span",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(2)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(2) > a",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(2) span",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(3)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(3) > a",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(3) span",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(4)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(4) > a",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(4) span",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(5)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(5) > a",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(5) span",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(6)",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(6) > a",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(6) span",
  ".columns > ul:nth-of-type(1) > li:nth-of-type(7)",
  "ul:nth-of-type(1) > li:nth-of-type(7) > a",
  "ul:nth-of-type(1) > li:nth-of-type(7) span",
  "ul:nth-of-type(1) > li:nth-of-type(8)",
  "ul:nth-of-type(1) > li:nth-of-type(8) > a",
  "ul:nth-of-type(1) > li:nth-of-type(8) span",
  "ul:nth-of-type(1) > li:nth-of-type(9)",
  "ul:nth-of-type(1) > li:nth-of-type(9) > a",
  "ul:nth-of-type(1) > li:nth-of-type(9) span",
  "ul:nth-of-type(1) > li:nth-of-type(10)",
  "ul:nth-of-type(1) > li:nth-of-type(10) > a",
  "ul:nth-of-type(1) > li:nth-of-type(10) span",
  "ul:nth-of-type(1) > li:nth-of-type(11)",
  "ul:nth-of-type(1) > li:nth-of-type(11) > a",
  "ul:nth-of-type(1) > li:nth-of-type(11) span",
  "li:nth-of-type(11) .badge",
  "li:nth-of-type(12)",
  "li:nth-of-type(12) > a",
  "li:nth-of-type(12) span",
  ".columns > ul:nth-of-type(2)",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(1)",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(1) > a",
  "ul:nth-of-type(2) > li:nth-of-type(1) span",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(2)",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(2) > a",
  "ul:nth-of-type(2) > li:nth-of-type(2) span",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(3)",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(3) > a",
  "ul:nth-of-type(2) > li:nth-of-type(3) span",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(4)",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(4) > a",
  "ul:nth-of-type(2) > li:nth-of-type(4) span",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(5)",
  ".columns > ul:nth-of-type(2) > li:nth-of-type(5) > a",
  "ul:nth-of-type(2) > li:nth-of-type(5) span",
  "li:nth-of-type(5) .badge",
  "ul:nth-of-type(2) > li:nth-of-type(6)",
  "ul:nth-of-type(2) > li:nth-of-type(6) > a",
  "ul:nth-of-type(2) > li:nth-of-type(6) span",
  "ul:nth-of-type(2) > li:nth-of-type(7)",
  "ul:nth-of-type(2) > li:nth-of-type(7) > a",
  "ul:nth-of-type(2) > li:nth-of-type(7) span",
  "ul:nth-of-type(2) > li:nth-of-type(8)",
  "ul:nth-of-type(2) > li:nth-of-type(8) > a",
  "ul:nth-of-type(2) > li:nth-of-type(8) span",
  "ul:nth-of-type(2) > li:nth-of-type(9)",
  "ul:nth-of-type(2) > li:nth-of-type(9) > a",
  "ul:nth-of-type(2) > li:nth-of-type(9) span",
  "ul:nth-of-type(2) > li:nth-of-type(10)",
  "ul:nth-of-type(2) > li:nth-of-type(10) > a",
  "ul:nth-of-type(2) > li:nth-of-type(10) span",
  "ul:nth-of-type(2) > li:nth-of-type(11)",
  "li:nth-of-type(11) > .selected",
  "li:nth-of-type(11) > .selected > span",
  ".sidebar",
  ".sidebar > div",
  ".sidebar h4",
  ".sidebar h4 > a",
  ".sidebar .optionList",
  "div:nth-child(1) > .optionList > li:nth-of-type(1)",
  "div:nth-child(1) > .optionList > li:nth-of-type(1) > a",
  "div:nth-child(1) > .optionList > li:nth-of-type(1) span",
  "li:nth-of-type(1) > a > .badge",
  "div:nth-child(1) > .optionList > li:nth-of-type(2)",
  "div:nth-child(1) > .optionList > li:nth-of-type(2) > a",
  "div:nth-child(1) > .optionList > li:nth-of-type(2) span",
  "li:nth-of-type(2) .badge",
  ".globalLink",
  ".globalLink > span",
  ".globalLink > strong",
  ".language",
  ".item-language",
  ".item-language > svg",
  ".item-language path",
  ".languagePicker",
  ".popup > .optionList",
  ".popup > .optionList > li:nth-of-type(1)",
  ".popup > .optionList > li:nth-of-type(1) > a",
  ".popup > .optionList > li:nth-of-type(1) span",
  ".popup > .optionList > li:nth-of-type(2)",
  "li:nth-of-type(2) > .selected",
  "li:nth-of-type(2) > .selected > span",
  ".popup > .optionList > li:nth-of-type(3)",
  ".popup > .optionList > li:nth-of-type(3) > a",
  ".popup > .optionList > li:nth-of-type(3) span",
  ".popup > .optionList > li:nth-of-type(4)",
  ".popup > .optionList > li:nth-of-type(4) > a",
  ".popup > .optionList > li:nth-of-type(4) span",
  ".popup > .optionList > li:nth-of-type(5)",
  ".popup > .optionList > li:nth-of-type(5) > a",
  ".popup > .optionList > li:nth-of-type(5) span",
  ".popup > .optionList > li:nth-of-type(6)",
  ".popup > .optionList > li:nth-of-type(6) > a",
  ".popup > .optionList > li:nth-of-type(6) span",
  ".space",
  ".copyright",
  "article:nth-of-type(2) > div > div",
  "div:nth-child(1) > div:nth-child(2) > div:nth-child(1)",
  "div:nth-child(1) > div > div:nth-of-type(1) > h4",
  ".splitColumn",
  ".splitColumn > ul:nth-of-type(1)",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(1)",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(1) > a",
  "li:nth-of-type(1) > a > strong",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(2)",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(2) > a",
  "li:nth-of-type(2) strong",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(3)",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(3) > a",
  "li:nth-of-type(3) strong",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(4)",
  ".splitColumn > ul:nth-of-type(1) > li:nth-of-type(4) > a",
  "li:nth-of-type(4) strong",
  ".splitColumn li:nth-of-type(5)",
  ".splitColumn li:nth-of-type(5) > a",
  "li:nth-of-type(5) strong",
  ".splitColumn li:nth-of-type(6)",
  ".splitColumn li:nth-of-type(6) > a",
  "li:nth-of-type(6) strong",
  ".splitColumn > ul:nth-of-type(2)",
  ".splitColumn > ul:nth-of-type(2) > li:nth-of-type(1)",
  ".splitColumn > ul:nth-of-type(2) > li:nth-of-type(1) > a",
  ".long-link",
  ".long-link > a",
  ".splitColumn > ul:nth-of-type(2) > li:nth-of-type(3)",
  ".splitColumn > ul:nth-of-type(2) > li:nth-of-type(3) > a",
  ".splitColumn > ul:nth-of-type(2) > li:nth-of-type(4)",
  ".splitColumn > ul:nth-of-type(2) > li:nth-of-type(4) > a",
  "div > div:nth-child(2) > div:nth-of-type(2)",
  "div:nth-of-type(2) > h4",
  "div:nth-child(2) > div:nth-of-type(2) > ul",
  "div:nth-child(2) > div:nth-of-type(2) > ul > li:nth-of-type(1)",
  "div:nth-child(2) > div:nth-of-type(2) > ul > li:nth-of-type(1) > a",
  "div:nth-child(2) > div:nth-of-type(2) > ul > li:nth-of-type(2)",
  "div:nth-child(2) > div:nth-of-type(2) > ul > li:nth-of-type(2) > a",
  "div:nth-child(2) > div:nth-of-type(2) li:nth-of-type(3)",
  "div:nth-child(2) > div:nth-of-type(2) li:nth-of-type(3) > a",
  "div:nth-of-type(2) > ul:nth-child(2) > li:nth-of-type(4)",
  "div:nth-of-type(2) > ul:nth-child(2) > li:nth-of-type(4) > a",
  "div:nth-of-type(1) > div > div:nth-of-type(3)",
  "div:nth-of-type(3) > h4",
  "div:nth-of-type(3) > ul",
  "div:nth-of-type(3) > ul > li:nth-of-type(1)",
  "div:nth-of-type(3) > ul > li:nth-of-type(1) > a",
  "div:nth-of-type(3) > ul > li:nth-of-type(2)",
  "div:nth-of-type(3) > ul > li:nth-of-type(2) > a",
  "div:nth-of-type(3) > ul > li:nth-of-type(3)",
  "div:nth-of-type(3) > ul > li:nth-of-type(3) > a",
  "div:nth-of-type(3) > ul > li:nth-of-type(4)",
  "div:nth-of-type(3) > ul > li:nth-of-type(4) > a",
  ".column > ul > li:nth-of-type(5)",
  ".column > ul > li:nth-of-type(5) > a",
  ".column > ul > li:nth-of-type(6)",
  ".column > ul > li:nth-of-type(6) > a",
  "div > div:nth-of-type(4)",
  "div:nth-of-type(4) > h4",
  "div:nth-of-type(4) > ul",
  "div:nth-of-type(4) li:nth-of-type(1)",
  "div:nth-of-type(4) li:nth-of-type(1) > a",
  "div:nth-of-type(4) li:nth-of-type(2)",
  "div:nth-of-type(4) li:nth-of-type(2) > a",
  "div:nth-of-type(4) li:nth-of-type(3)",
  "div:nth-of-type(4) li:nth-of-type(3) > a",
  "#site-analytics-config",
  "noscript:nth-of-type(1)",
  "noscript > img",
  "noscript:nth-of-type(2)",
  "iframe",
  "body > script:nth-of-type(2)",
  "body > script:nth-of-type(3)",
  ".cookie-notification-container",
  ".cookie-notification",
  ".cookie-notification-copy",
  ".cookie-notification-copy > a",
  ".dismiss-button",
  "body > link",
]
`;

exports[`tailwindcss 1`] = `
[
  "html",
  "head",
  "meta:nth-of-type(1)",
  "[name="viewport"]",
  "link:nth-of-type(1)",
  "link:nth-of-type(2)",
  "link:nth-of-type(3)",
  "[rel="preconnect"]",
  "link:nth-of-type(5)",
  "[data-auto="false"]",
  "script:nth-of-type(2)",
  "[rel="preload"]",
  "link:nth-of-type(7)",
  "link:nth-of-type(8)",
  "link:nth-of-type(9)",
  "script:nth-of-type(3)",
  "meta:nth-of-type(3)",
  "meta:nth-of-type(4)",
  "meta:nth-of-type(5)",
  "meta:nth-of-type(6)",
  "meta:nth-of-type(7)",
  "meta:nth-of-type(8)",
  "meta:nth-of-type(9)",
  "meta:nth-of-type(10)",
  "meta:nth-of-type(11)",
  "meta:nth-of-type(12)",
  "meta:nth-of-type(13)",
  "meta:nth-of-type(14)",
  "title",
  ".font-sans",
  "#app",
  "#app > .flex-none",
  "nav",
  "nav > .relative",
  ".relative > .flex-none",
  ".flex-none > span",
  ".relative > .flex-none > svg",
  ".flex-none .fill-sky-400",
  ".flex-none > svg > path:nth-of-type(2)",
  ".flex-none > svg > path:nth-of-type(3)",
  ".relative > .group",
  ".fill-sky-500",
  ".fill-sky-500 > path",
  ".group > .font-semibold",
  ".fill-slate-900",
  ".fill-slate-900 > circle",
  ".hidden > .font-medium",
  ".group > .font-medium > span",
  ".group > svg:nth-of-type(3)",
  ".group > svg:nth-of-type(3) > path",
  "nav > .relative > div:nth-of-type(1)",
  ".relative > div:nth-of-type(1) > a:nth-of-type(1)",
  ".relative > div:nth-of-type(1) > a:nth-of-type(2)",
  "a:nth-of-type(3)",
  "a:nth-of-type(4)",
  ".relative > button:nth-of-type(1)",
  ".relative > button:nth-of-type(1) > span",
  ".fill-gray-900",
  ".fill-gray-900 > path",
  "button:nth-of-type(2)",
  "button:nth-of-type(2) > span",
  ".stroke-slate-900",
  ".stroke-slate-900 > path",
  "nav div:nth-of-type(2)",
  ".flex > div:nth-of-type(2) > a:nth-of-type(1)",
  ".hidden > .inline-flex",
  ".hidden > .inline-flex > span",
  ".hidden > .inline-flex > span > span",
  "#app > div",
  "#app > .relative > .absolute",
  ".overflow-hidden > .relative",
  ".relative > .text-sky-500",
  ".relative > .text-4xl",
  ".grid > .text-slate-700",
  ".relative > .flex-col",
  ".flex-col > .text-white",
  ".flex-col > .text-white > span",
  "span > .text-slate-400",
  ".flex-col > .text-slate-900",
  ".flex-col > .text-slate-900 > span",
  ".text-slate-900 > span > .hidden",
  ".grid > .pointer-events-none",
  ".origin-top",
  ".origin-top > div:nth-of-type(1)",
  ".flex > .items-end",
  ".flex > .items-end > div:nth-of-type(1)",
  ".top-full",
  ".top-full > .flex",
  ".top-full > .flex > div:nth-of-type(1)",
  ".top-full div:nth-of-type(2)",
  ".flex > .items-end > div:nth-of-type(3)",
  ".flex > .flex > div:nth-of-type(3) > div:nth-of-type(1)",
  "div:nth-of-type(3) > div > .rounded-full",
  "div:nth-of-type(1) > .pointer-events-auto > .rounded-full",
  ".flex > div > div > .justify-end",
  ".justify-end > .rounded-full",
  ".flex > .pointer-events-auto > .rounded-full",
  ".justify-end > .font-semibold",
  ".text-right",
  ".text-right > div:nth-of-type(1)",
  ".text-right > div:nth-of-type(2)",
  ".text-right > div:nth-of-type(3)",
  ".text-right > .pointer-events-auto",
  ".inline-flex > .flex",
  ".inline-flex .flex-none",
  ".inline-flex path",
  ".inline-flex > div:nth-of-type(2)",
  ".flex > .relative > .relative",
  ".flex > div:nth-of-type(4) > div:nth-of-type(1)",
  ".items-end > .relative > div:nth-of-type(2)",
  ".items-end > .relative > div:nth-of-type(3)",
  ".relative > .relative > .bottom-full",
  "div:nth-of-type(4) > .absolute > .flex",
  "div:nth-of-type(4) > .absolute > .flex > div:nth-of-type(1)",
  "div:nth-of-type(4) > .absolute div:nth-of-type(2)",
  ".flex > .relative > .text-slate-900",
  ".relative > .text-slate-900 > div:nth-of-type(1)",
  ".text-slate-900 > div:nth-of-type(1) > .rounded-full",
  ".text-slate-900 > div:nth-of-type(1) > .flex-auto",
  "div:nth-of-type(1) > .flex-auto > .font-medium",
  "div:nth-of-type(1) > .flex-auto > .text-slate-700",
  ".text-slate-900 > div:nth-of-type(1) > .text-slate-700",
  ".relative > .text-slate-900 > div:nth-of-type(2)",
  ".text-slate-900 > div:nth-of-type(2) > .rounded-full",
  ".text-slate-900 > div:nth-of-type(2) > .flex-auto",
  "div:nth-of-type(2) > .flex-auto > .font-medium",
  "div:nth-of-type(2) > .flex-auto > .text-slate-700",
  ".text-slate-900 > div:nth-of-type(2) > .pointer-events-auto",
  ".relative > .text-slate-900 > div:nth-of-type(3)",
  "div:nth-of-type(3) > .rounded-full",
  "div:nth-of-type(3) > .flex-auto",
  "div:nth-of-type(3) > .flex-auto > .font-medium",
  "div:nth-of-type(3) > .flex-auto > .text-slate-700",
  "div:nth-of-type(3) > .pointer-events-auto",
  ".relative > .text-slate-900 > div:nth-of-type(4)",
  ".text-center",
  ".origin-top > div:nth-of-type(2)",
  ".origin-top > div:nth-of-type(2) > .relative",
  ".justify-end > .relative > .flex",
  ".justify-end > .relative > .flex > div:nth-of-type(1)",
  "div:nth-of-type(1) > .flex > div:nth-of-type(1) > svg:nth-of-type(1)",
  "div:nth-of-type(1) > .flex > div:nth-of-type(1) > svg:nth-of-type(1) > path:nth-of-type(1)",
  "div:nth-of-type(1) > .flex-none > path:nth-of-type(2)",
  ".flex-none > path:nth-of-type(3)",
  "div:nth-of-type(1) > svg:nth-of-type(2)",
  ".flex-none > circle",
  "div:nth-of-type(1) > svg:nth-of-type(2) > path",
  ".flex > .flex > svg:nth-of-type(3)",
  "div:nth-of-type(1) > svg:nth-of-type(3) > path",
  ".relative > .flex > .flex-auto",
  ".flex > .items-center > div:nth-of-type(1)",
  ".flex-auto > .flex",
  ".rounded-full > .flex-none",
  ".flex-auto > .flex > .rounded-full",
  ".flex-auto > div:nth-of-type(3)",
  ".flex-auto > svg:nth-of-type(1)",
  ".flex-auto > svg:nth-of-type(1) > path:nth-of-type(1)",
  ".flex-auto path:nth-of-type(2)",
  ".flex-auto > svg:nth-of-type(2)",
  ".flex-auto > svg:nth-of-type(2) > path",
  ".origin-top > .items-start",
  ".origin-top > .items-start > div:nth-of-type(1)",
  ".items-start > div > .items-end",
  ".justify-end > .absolute",
  ".items-start > div > .relative > div:nth-of-type(2)",
  ".relative > div > .justify-end",
  ".justify-end > .overflow-hidden",
  ".justify-end > .overflow-hidden > div:nth-of-type(1)",
  ".flex > .pointer-events-auto > div:nth-of-type(2)",
  ".flex > .pointer-events-auto > div:nth-of-type(3)",
  ".relative > div:nth-of-type(2) > .relative",
  ".relative > div:nth-of-type(2) > .relative > div:nth-of-type(1)",
  ".relative > div:nth-of-type(2) > .relative > div:nth-of-type(2)",
  ".relative > div:nth-of-type(2) > .relative > div:nth-of-type(3)",
  "div:nth-of-type(2) > .bottom-full",
  "div:nth-of-type(2) > .bottom-full > .flex",
  "div:nth-of-type(2) > .bottom-full > .flex > div:nth-of-type(1)",
  "div:nth-of-type(2) > .bottom-full div:nth-of-type(2)",
  "div > .relative > .items-center",
  ".relative > .flex > .stroke-slate-500",
  "div:nth-of-type(5) > .stroke-slate-500 > path",
  ".relative > .flex > svg:nth-of-type(2)",
  "div:nth-of-type(5) > svg:nth-of-type(2) > path",
  ".relative > .items-center > .flex",
  ".items-center > div > svg",
  ".items-center > div path",
  ".relative > .flex > .font-medium",
  ".overflow-visible",
  ".overflow-visible > path",
  "svg:nth-of-type(4)",
  "svg:nth-of-type(4) > path",
  ".justify-end > div:nth-of-type(3)",
  ".justify-end > div:nth-of-type(3) > div",
  ".ring-indigo-600",
  ".ring-indigo-600 > .flex",
  ".ring-indigo-600 > .flex > .font-medium",
  ".ring-indigo-600 .flex-none",
  ".justify-between > svg:nth-child(2) > path",
  ".ring-indigo-600 > .text-slate-700",
  ".ring-indigo-600 > .font-medium",
  ".relative > .relative > div:nth-of-type(1) > div:nth-of-type(2)",
  "div:nth-of-type(2) > .justify-between",
  "div:nth-of-type(2) > .justify-between > .font-medium",
  ".relative > div:nth-of-type(1) > div:nth-of-type(2) > .text-slate-700",
  "div:nth-of-type(1) > div:nth-of-type(2) > .font-medium",
  ".items-start .items-start",
  ".items-start .items-start > div:nth-of-type(1)",
  ".items-start > div > .flex > div:nth-of-type(1) > div:nth-of-type(1)",
  ".items-start > div > .flex > div:nth-of-type(1) > div:nth-of-type(2)",
  ".flex > .relative > .font-medium",
  ".flex > .relative > .font-medium > div:nth-of-type(1)",
  ".pointer-events-auto > div:nth-of-type(1) > .flex",
  "div:nth-of-type(1) > .flex > .fill-slate-400",
  "div:nth-of-type(1) > .flex > .fill-slate-400 > path",
  ".font-medium .text-slate-900",
  ".flex > .relative > .font-medium > div:nth-of-type(2)",
  ".font-medium > div:nth-of-type(2) > .flex",
  "div:nth-of-type(2) > .flex-none > .fill-slate-400",
  "div:nth-of-type(2) > .flex-none > .fill-slate-400 > path",
  ".font-medium > div:nth-of-type(2) > div:nth-of-type(2)",
  ".relative > .font-medium > div:nth-of-type(3)",
  "div:nth-of-type(3) > .justify-center",
  "div:nth-of-type(3) > .flex > .fill-slate-400",
  "div:nth-of-type(3) > .flex > .fill-slate-400 > path",
  ".font-medium > div:nth-of-type(3) > div:nth-of-type(2)",
  ".items-start .items-start > div:nth-of-type(2)",
  ".items-start .items-start > div:nth-of-type(2) > div:nth-of-type(1)",
  ".items-start .items-start > div:nth-of-type(2) > div:nth-of-type(2)",
  ".items-start > div:nth-of-type(2) > div:nth-of-type(3)",
  ".items-start > .relative > .overflow-hidden",
  ".items-start > .relative > .absolute > .flex",
  ".items-start > .relative > .absolute > .flex > div:nth-of-type(1)",
  ".items-start > .relative > .absolute div:nth-of-type(2)",
  ".flex > div:nth-of-type(2) > .pointer-events-auto",
  ".pointer-events-auto > .font-semibold",
  ".text-slate-700 > .justify-between",
  ".justify-between > .fill-slate-400",
  ".justify-between > .fill-slate-400 > path",
  ".pointer-events-auto > .overflow-hidden",
  ".overflow-hidden > .text-white",
  ".pointer-events-auto > .overflow-hidden > div:nth-of-type(2)",
  ".pointer-events-auto > .overflow-hidden > div:nth-of-type(3)",
  ".overflow-hidden > div:nth-of-type(4)",
  ".origin-top > .flex > div:nth-of-type(2)",
  ".origin-top > .flex > div:nth-of-type(2) > div:nth-of-type(1)",
  ".items-start > div > .relative > .pointer-events-auto",
  ".pointer-events-auto > .text-slate-400",
  ".text-slate-400 > .stroke-slate-500",
  ".text-slate-400 path",
  ".items-start > div > .relative > .pointer-events-auto > div:nth-of-type(2)",
  ".pointer-events-auto > div > .font-semibold",
  ".pointer-events-auto > div:nth-of-type(2) > .text-white",
  ".stroke-white",
  ".stroke-white > path",
  ".pointer-events-auto > div:nth-of-type(2) > div:nth-of-type(3)",
  "div:nth-of-type(2) > div:nth-of-type(3) > .flex-none",
  "div:nth-of-type(2) > div:nth-of-type(3) path",
  ".flex > div > .relative > .pointer-events-auto > div:nth-of-type(3)",
  "div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(1)",
  "div:nth-of-type(1) > .stroke-slate-400",
  "div:nth-of-type(1) > .stroke-slate-400 > path",
  "div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(3) > div:nth-of-type(2)",
  "div:nth-of-type(2) > .stroke-slate-400",
  "div:nth-of-type(2) > .stroke-slate-400 > path",
  "div:nth-of-type(1) > .pointer-events-auto > div:nth-of-type(3) > div:nth-of-type(3)",
  "div:nth-of-type(3) > div:nth-of-type(3) > .stroke-slate-400",
  "div:nth-of-type(3) > div:nth-of-type(3) > .flex-none > path",
  "div:nth-of-type(1) > .pointer-events-auto div:nth-of-type(4)",
  "div:nth-of-type(4) > .stroke-slate-400",
  "div:nth-of-type(4) > .flex-none > path",
  ".origin-top > .flex > div:nth-of-type(2) > div:nth-of-type(2)",
  ".items-start > div:nth-of-type(2) > div:nth-of-type(2) > div",
  "div:nth-of-type(2) > div:nth-of-type(1) > .font-semibold",
  ".relative > div > .text-slate-500",
  "div:nth-of-type(2) > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(3)",
  "div:nth-of-type(1) > .text-slate-900 > div:nth-of-type(1)",
  "div:nth-of-type(1) > span:nth-of-type(1)",
  "div:nth-of-type(1) > span:nth-of-type(2)",
  "div:nth-of-type(3) > .flex > .pointer-events-auto",
  "div:nth-of-type(1) > .text-slate-900 > div:nth-of-type(2)",
  ".text-slate-900 > div:nth-of-type(2) > span:nth-of-type(1)",
  ".text-slate-900 > div:nth-of-type(2) > span:nth-of-type(2)",
  ".text-slate-900 > .flex > .flex",
  ".flex > .font-medium > span:nth-of-type(1)",
  ".font-medium > span:nth-of-type(2)",
  ".font-medium > span:nth-of-type(3)",
  "div:nth-of-type(1) > .text-slate-900 > div:nth-of-type(3)",
  "div:nth-of-type(3) > span:nth-of-type(1)",
  "div:nth-of-type(3) > span:nth-of-type(2)",
  "div:nth-of-type(3) > span > .pointer-events-auto",
  "div:nth-of-type(3) > span > .pointer-events-auto > .rounded-full",
  "div:nth-of-type(1) > .text-slate-900 > div:nth-of-type(4)",
  "div:nth-of-type(4) > span:nth-of-type(1)",
  "div:nth-of-type(4) > span:nth-of-type(2)",
  "div:nth-of-type(4) > span > .pointer-events-auto",
  "div:nth-of-type(4) .pointer-events-auto > .rounded-full",
  "section:nth-of-type(1)",
  "section:nth-of-type(1) > div:nth-of-type(1)",
  "section > div > h2",
  "section > div > .text-4xl",
  "section > div:nth-of-type(2)",
  "section > div > .text-slate-700",
  "section > div:nth-of-type(3)",
  "div:nth-of-type(3) > .text-indigo-600",
  "div:nth-of-type(3) > .text-indigo-600 > span",
  "section > button",
  "section > div:nth-of-type(4)",
  "[role="tablist"]",
  "[role="tablist"] > div:nth-of-type(1)",
  ".border-indigo-500",
  ".border-indigo-500 > h3",
  "h3 > .text-indigo-600",
  ".text-indigo-600 > .absolute",
  ".border-indigo-500 > .hidden",
  "[role="tablist"] > div:nth-of-type(2)",
  "[role="tablist"] > div:nth-of-type(3)",
  "div:nth-of-type(3) > .text-left",
  "div:nth-of-type(3) > .relative > h3",
  "div:nth-of-type(3) > .relative .font-semibold",
  "div:nth-of-type(3) > .relative .font-semibold > .absolute",
  "div:nth-of-type(3) > .relative > .hidden",
  "[role="tablist"] > div:nth-of-type(4)",
  ".flex > div:nth-of-type(5)",
  "div:nth-of-type(5) > .relative",
  "div:nth-of-type(5) h3",
  "div:nth-of-type(5) > .relative .font-semibold",
  "div:nth-of-type(5) .absolute",
  "div:nth-of-type(5) .hidden",
  "section:nth-of-type(1) > div > div:nth-of-type(2)",
  "div > [data-headlessui-state="selected"]",
  "[role="tabpanel"] > .text-slate-700",
  "[role="tabpanel"] > div:nth-of-type(1)",
  "[role="tabpanel"] .grid",
  ".grid > li:nth-of-type(1)",
  "li:nth-of-type(1) > .group",
  "li:nth-of-type(1) .overflow-hidden",
  "li:nth-of-type(1) .relative > .absolute",
  "li:nth-of-type(1) .text-slate-900",
  "li:nth-of-type(1) > .group a",
  "li:nth-of-type(1) .font-medium .absolute",
  "li:nth-of-type(1) .font-medium .relative",
  "li:nth-of-type(1) .text-slate-500",
  ".grid > li:nth-of-type(2)",
  "li:nth-of-type(2) > .group",
  "li:nth-of-type(2) .overflow-hidden",
  "li:nth-of-type(2) .relative > .absolute",
  "li:nth-of-type(2) .text-slate-900",
  "li:nth-of-type(2) > .group a",
  "li:nth-of-type(2) .font-medium .absolute",
  "li:nth-of-type(2) .font-medium .relative",
  "li:nth-of-type(2) .text-slate-500",
  ".grid > li:nth-of-type(3)",
  "li:nth-of-type(3) > .group",
  "li:nth-of-type(3) .overflow-hidden",
  "li:nth-of-type(3) .relative > .absolute",
  "li:nth-of-type(3) .text-slate-900",
  "li:nth-of-type(3) > .group a",
  "li:nth-of-type(3) .font-medium .absolute",
  "li:nth-of-type(3) .font-medium .relative",
  "li:nth-of-type(3) .text-slate-500",
  ".grid > li:nth-of-type(4)",
  "li:nth-of-type(4) > .group",
  "li:nth-of-type(4) .overflow-hidden",
  "li:nth-of-type(4) .relative > .absolute",
  "li:nth-of-type(4) .text-slate-900",
  "li:nth-of-type(4) > .group a",
  "li:nth-of-type(4) .font-medium .absolute",
  "li:nth-of-type(4) .font-medium .relative",
  "li:nth-of-type(4) .text-slate-500",
  ".grid > li:nth-of-type(5)",
  "li:nth-of-type(5) > .group",
  "li:nth-of-type(5) .overflow-hidden",
  "li:nth-of-type(5) .relative > .absolute",
  "li:nth-of-type(5) .text-slate-900",
  "li:nth-of-type(5) > .group a",
  "li:nth-of-type(5) .font-medium .absolute",
  "li:nth-of-type(5) .font-medium .relative",
  "li:nth-of-type(5) .text-slate-500",
  ".grid > li:nth-of-type(6)",
  "li:nth-of-type(6) > .group",
  "li:nth-of-type(6) .overflow-hidden",
  "li:nth-of-type(6) .relative > .absolute",
  "li:nth-of-type(6) .text-slate-900",
  "li:nth-of-type(6) > .group a",
  "li:nth-of-type(6) .font-medium .absolute",
  "li:nth-of-type(6) .font-medium .relative",
  "li:nth-of-type(6) .text-slate-500",
  ".grid > li:nth-of-type(7)",
  "li:nth-of-type(7) > .group",
  "li:nth-of-type(7) .overflow-hidden",
  "li:nth-of-type(7) .relative > .absolute",
  "li:nth-of-type(7) .text-slate-900",
  "li:nth-of-type(7) > .group a",
  "li:nth-of-type(7) .font-medium .absolute",
  "li:nth-of-type(7) .font-medium .relative",
  "li:nth-of-type(7) .text-slate-500",
  ".grid > li:nth-of-type(8)",
  "li:nth-of-type(8) > .group",
  "li:nth-of-type(8) .overflow-hidden",
  "li:nth-of-type(8) .relative > .absolute",
  "li:nth-of-type(8) .text-slate-900",
  "li:nth-of-type(8) > .group a",
  "li:nth-of-type(8) .font-medium .absolute",
  "li:nth-of-type(8) .font-medium .relative",
  "li:nth-of-type(8) .text-slate-500",
  ".grid > li:nth-of-type(9)",
  "li:nth-of-type(9) > .group",
  "li:nth-of-type(9) .overflow-hidden",
  "li:nth-of-type(9) .relative > .absolute",
  "li:nth-of-type(9) .text-slate-900",
  "li:nth-of-type(9) > .group a",
  "li:nth-of-type(9) .font-medium .absolute",
  "li:nth-of-type(9) .font-medium .relative",
  "li:nth-of-type(9) .text-slate-500",
  ".grid > li:nth-of-type(10)",
  "li:nth-of-type(10) > .group",
  "li:nth-of-type(10) .overflow-hidden",
  "li:nth-of-type(10) .relative > .absolute",
  "li:nth-of-type(10) .text-slate-900",
  "li:nth-of-type(10) > .group a",
  "li:nth-of-type(10) .font-medium .absolute",
  "li:nth-of-type(10) .font-medium .relative",
  "li:nth-of-type(10) .text-slate-500",
  ".from-white",
  "[role="tabpanel"] > .pointer-events-none",
  ".pointer-events-none > .inline-flex",
  ".pointer-events-auto > span",
  ".pointer-events-auto > span > span",
  "div:nth-of-type(4) > div > span:nth-of-type(1)",
  "div:nth-of-type(4) > div > span:nth-of-type(2)",
  "section:nth-of-type(2)",
  "section:nth-of-type(2) > div",
  "section:nth-of-type(2) > div > div:nth-of-type(1)",
  "div > div > h2",
  "div:nth-child(1) > div > .text-4xl",
  "section:nth-of-type(2) > div > div:nth-of-type(2)",
  "div:nth-of-type(1) > div > p:nth-child(1)",
  "section > div > div:nth-of-type(3)",
  "div:nth-of-type(3) > .text-sky-500",
  ".text-sky-500 > span",
  ".overflow-hidden > div > div:nth-of-type(4)",
  "div:nth-of-type(1) > div:nth-of-type(4) > .flex-none",
  ".flex-none > .flex",
  ".border-blue-500",
  ".border-blue-500 > h3",
  ".text-blue-600",
  ".text-blue-600 > .absolute",
  ".border-blue-500 > .text-slate-600",
  ".border-blue-500 > .hidden",
  ".flex-none > .flex > div:nth-of-type(2)",
  ".flex > div:nth-of-type(2) > h3",
  "div:nth-of-type(2) > h3 > .font-semibold",
  "div:nth-of-type(2) .font-semibold > .absolute",
  ".flex > div:nth-of-type(2) > .text-slate-600",
  "div:nth-of-type(2) > .hidden",
  ".flex-none div:nth-of-type(3)",
  ".flex > div:nth-of-type(3) > h3",
  "div:nth-of-type(3) > h3 > .font-semibold",
  "div:nth-of-type(3) > h3 .absolute",
  "div:nth-of-type(3) > .text-slate-600",
  "div:nth-of-type(3) > .hidden",
  ".flex-none div:nth-of-type(4)",
  ".flex > div:nth-of-type(4) > h3",
  "div:nth-of-type(4) > h3 > .font-semibold",
  "div:nth-of-type(4) > h3 .absolute",
  "div:nth-of-type(4) > .text-slate-600",
  "div:nth-of-type(4) > .hidden",
  ".transition-transform",
  ".transition-transform > div:nth-of-type(1)",
  ".transition-transform > div:nth-of-type(1) > .text-slate-700",
  ".flex > div:nth-of-type(1) > img",
  ".transition-transform > div:nth-of-type(2)",
  ".transition-transform > div:nth-of-type(2) > .text-slate-700",
  ".flex > div:nth-of-type(2) > img",
  ".transition-transform > div:nth-of-type(3)",
  ".transition-transform > div:nth-of-type(3) > .text-slate-700",
  ".flex > div:nth-of-type(3) > img",
  ".transition-transform > div:nth-of-type(4)",
  ".transition-transform > div:nth-of-type(4) > .text-slate-700",
  "div:nth-of-type(4) > img",
  "footer",
  "#footer-heading",
  "footer > div:nth-of-type(1)",
  "footer svg",
  ".text-slate-900 > .fill-sky-400",
  ".text-slate-900 > path:nth-of-type(2)",
  ".text-slate-900 > path:nth-of-type(3)",
  "div > .text-gray-600",
  ".text-gray-600 > .whitespace-nowrap",
  "hr",
  "footer > div > .grid",
  "footer > div > .grid > div:nth-of-type(1)",
  "div:nth-of-type(1) > .text-gray-900",
  "div:nth-of-type(1) > [role="list"]",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(1)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(1) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(2)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(2) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(3)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(3) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(4)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(4) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(5)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(5) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(6)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(6) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(7)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(7) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(8)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(8) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(9)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(9) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(10)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(10) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(11)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(11) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(12)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(12) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(13)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(13) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(14)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(14) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(15)",
  "div:nth-of-type(1) > [role="list"] > li:nth-of-type(15) > .text-gray-600",
  "div:nth-of-type(1) > [role="list"] span",
  "div > .grid > div:nth-child(2)",
  "div:nth-of-type(2) > .text-gray-900",
  "div:nth-of-type(2) > [role="list"]",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(1)",
  "div:nth-of-type(2) li:nth-of-type(1) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(2)",
  "div:nth-of-type(2) li:nth-of-type(2) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(3)",
  "div:nth-of-type(2) li:nth-of-type(3) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(4)",
  "div:nth-of-type(2) li:nth-of-type(4) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(5)",
  "div:nth-of-type(2) li:nth-of-type(5) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(6)",
  "div:nth-of-type(2) li:nth-of-type(6) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(7)",
  "div:nth-of-type(2) li:nth-of-type(7) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(8)",
  "div:nth-of-type(2) li:nth-of-type(8) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(9)",
  "div:nth-of-type(2) li:nth-of-type(9) > .text-gray-600",
  "div:nth-of-type(2) > [role="list"] > li:nth-of-type(10)",
  "div:nth-of-type(2) li:nth-of-type(10) > .text-gray-600",
  "div:nth-of-type(2) li:nth-of-type(11)",
  "div:nth-of-type(2) li:nth-of-type(11) > .text-gray-600",
  "div:nth-of-type(2) li:nth-of-type(12)",
  "div:nth-of-type(2) li:nth-of-type(12) > .text-gray-600",
  "div:nth-of-type(2) li:nth-of-type(13)",
  "div:nth-of-type(2) li:nth-of-type(13) > .text-gray-600",
  "div:nth-of-type(2) li:nth-of-type(14)",
  "div:nth-of-type(2) li:nth-of-type(14) > .text-gray-600",
  "div:nth-of-type(2) li:nth-of-type(15)",
  "div:nth-of-type(2) li:nth-of-type(15) > .text-gray-600",
  "div:nth-of-type(2) .text-gray-600 > span",
  ".grid > div:nth-child(3)",
  "div:nth-of-type(3) > .text-gray-900",
  "div:nth-of-type(3) > [role="list"]",
  "div:nth-of-type(3) li:nth-of-type(1)",
  "div:nth-of-type(3) li:nth-of-type(1) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(2)",
  "div:nth-of-type(3) li:nth-of-type(2) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(3)",
  "div:nth-of-type(3) li:nth-of-type(3) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(4)",
  "div:nth-of-type(3) li:nth-of-type(4) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(5)",
  "div:nth-of-type(3) li:nth-of-type(5) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(6)",
  "div:nth-of-type(3) li:nth-of-type(6) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(7)",
  "div:nth-of-type(3) li:nth-of-type(7) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(8)",
  "div:nth-of-type(3) li:nth-of-type(8) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(9)",
  "div:nth-of-type(3) li:nth-of-type(9) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(10)",
  "div:nth-of-type(3) li:nth-of-type(10) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(11)",
  "div:nth-of-type(3) li:nth-of-type(11) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(12)",
  "div:nth-of-type(3) li:nth-of-type(12) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(13)",
  "div:nth-of-type(3) li:nth-of-type(13) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(14)",
  "div:nth-of-type(3) li:nth-of-type(14) > .text-gray-600",
  "div:nth-of-type(3) li:nth-of-type(15)",
  "div:nth-of-type(3) li:nth-of-type(15) > .text-gray-600",
  "div:nth-of-type(3) .group span",
  ".grid > div:nth-of-type(4)",
  "div:nth-of-type(4) > .font-semibold",
  "div:nth-of-type(4) > [role="list"]",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(1)",
  "div:nth-of-type(4) li:nth-of-type(1) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(2)",
  "div:nth-of-type(4) li:nth-of-type(2) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(3)",
  "div:nth-of-type(4) li:nth-of-type(3) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(4)",
  "div:nth-of-type(4) li:nth-of-type(4) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(5)",
  "div:nth-of-type(4) li:nth-of-type(5) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(6)",
  "div:nth-of-type(4) li:nth-of-type(6) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(7)",
  "div:nth-of-type(4) li:nth-of-type(7) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(8)",
  "div:nth-of-type(4) li:nth-of-type(8) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(9)",
  "div:nth-of-type(4) li:nth-of-type(9) > .text-gray-600",
  "div:nth-of-type(4) > [role="list"] > li:nth-of-type(10)",
  "div:nth-of-type(4) li:nth-of-type(10) > .text-gray-600",
  "div:nth-of-type(4) li:nth-of-type(11)",
  "div:nth-of-type(4) li:nth-of-type(11) > .text-gray-600",
  "div:nth-of-type(4) li:nth-of-type(12)",
  "div:nth-of-type(4) li:nth-of-type(12) > .text-gray-600",
  "li:nth-of-type(12) span",
  ".items-centers",
  ".items-centers > .text-slate-600",
  ".items-centers > .flex",
  ".font-semibold > a:nth-of-type(1)",
  ".justify-center > div",
  ".justify-center > a:nth-of-type(2)",
]
`;
